SERVER-3245: $addToSet $each filter dups of new field